# observe-lens

./: Agent.md  README.md
observelens-service/: .env.example  .gitignore  Agent.md  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
observelens-service/docs/: observelens-database-table-design.md
observelens-service/migrations/: env.py
observelens-service/migrations/versions/: 20260721_0001_create_conversation_core.py  20260722_0002_create_incidents.py  20260722_0003_create_inspections.py  20260722_0004_create_settings.py
observelens-service/src/observelens_service/: __init__.py  api.py  main.py
observelens-service/src/observelens_service/clients/: __init__.py  agent.py  catalog.py  knowledge_base.py
observelens-service/src/observelens_service/common/: context.py  dependencies.py  exceptions.py
observelens-service/src/observelens_service/config/: settings.py
observelens-service/src/observelens_service/database/: base.py  session.py
observelens-service/src/observelens_service/modules/conversations/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
observelens-service/src/observelens_service/modules/entities/: __init__.py  router.py  schemas.py  service.py
observelens-service/src/observelens_service/modules/incidents/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
observelens-service/src/observelens_service/modules/inspections/: __init__.py  models.py  repository.py  (+3 more)
observelens-service/tests/conversations/: test_service.py
observelens-service/tests/inspections/: test_schemas.py
(+77 files in other folders)
