[project]
name = "observelens-service"
version = "0.1.0"
description = "ObserveLens Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic-settings>=2.6,<3.0",
  "python-dotenv>=1.0,<2.0",
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "alembic>=1.14,<2.0",
  "asyncpg>=0.29,<1.0",
  "httpx>=0.27,<1.0",
  "structlog>=24.4,<26.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "ruff>=0.8,<1.0",
  "mypy>=1.13,<2.0",
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/observelens_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["observelens_service"]
